ui: fix empty-state color contrast violation

--- a/ui/app/styles/_page.scss
+++ b/ui/app/styles/_page.scss
@@ -622,7 +622,7 @@
     padding: scale.$lg-4;
 
     p {
-      color: rgb(var(--text-subtle));
+      color: rgb(var(--text-muted));
       @include Typography.Interface(M);
       margin: scale.$sm-2;
 
